<resources>
    <string name="app_name">RecyclerRecipes</string>
    <string name="close_button">Cerrar</string>
    <string name="recipe_id">ID de la receta</string>
    <string name="recipe_title">Nombre de la receta</string>
    <string name="recipe_resume">Resumen de la receta</string>
    <string name="recipe_details">Detalles de la receta</string>
    <string name="take_photo_button">Tomar una foto</string>
    <string name="recycler_item_id">"id: "</string>
    <string name="recipe_image_content_description">Recipe image</string>
    <string name="photo_preview_content_description">Previsualización de la imagen</string>
    <string name="fab_button_content_description">Floating Action Button - Add new recipe</string>
    <string name="nav_settings_text">Opciones</string>
    <string name="nav_header_title">RecyclerRecipes</string>
    <string name="nav_header_created_by">Created by estemon</string>
    <string name="nav_header_content_description">Navigation header</string>
</resources>