<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/add_recipe_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_id" />

    <EditText
        android:id="@+id/add_recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title" />

    <EditText
        android:id="@+id/add_recipe_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_resume"/>

    <EditText
        android:id="@+id/add_recipe_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_details" />

    <Button
        android:id="@+id/add_recipe_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo_button" />

    <ImageView
        android:id="@+id/preview_recipe_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

</LinearLayout>