<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@drawable/drawer_header_background">

        <ImageView
            android:id="@+id/nav_header_image"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/nav_header_content_description"
            android:paddingTop="8dp"
            app:srcCompat="@drawable/ic_cookie" />

        <TextView
            android:id="@+id/nav_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nav_header_subtitle"
            android:layout_alignBottom="@+id/nav_header_subtitle"
            android:layout_marginBottom="30dp"
            android:paddingTop="8dp"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/nav_header_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:text="@string/nav_header_created_by" />
    </RelativeLayout>

</LinearLayout>